@@ -122,6 +122,8 @@ Changes in behaviour not resulting in compilation errors, please read this!
   or equivalent function should now be done into wxApp::OnEventLoopEnter().
   See wxApp::OnEventLoopEnter() and wxApp::OnEventLoopExit() docs for more info.
 
+- wxLoadFileSelector() now allows the user to select existing files only.
+
 
 Changes in behaviour which may result in compilation errors
 -----------------------------------------------------------
